--- a/public/form.html
+++ b/public/form.html
@@ -37,12 +37,6 @@
             <div class="slide" style="background-image: url('fundos/6.jpg')">
                 <div class="slide-overlay"></div>
             </div>
-            <div class="slide" style="background-image: url('fundos/7.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide" style="background-image: url('fundos/8.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
         </div>
 
         <!-- Conteúdo do formulário centralizado -->
@@ -87,17 +81,9 @@
 
     <!-- Modal do Regulamento -->
     <div id="termsModal" class="modal">
-        <!-- Background do modal com carrossel -->
+        <!-- Background do modal sem carrossel -->
         <div class="modal-background">
-            <div class="slide active" style="background-image: url('fundos/1.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide" style="background-image: url('fundos/2.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide" style="background-image: url('fundos/3.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
+            <div class="modal-overlay"></div>
         </div>
 
         <div class="modal-content">
@@ -105,129 +91,94 @@
             <h2>REGULAMENTO OFICIAL – DESAFIO SWS | JULHO 2025</h2>
             <div class="modal-body">
                 <h3>1. Objetivo da Campanha</h3>
-                <p>Estabelecer as condições de participação, critérios de apuração e premiação
-                    da campanha Desafio SWS – Julho 2025, promovida pela SWS Group com o
-                    intuito de estimular o desempenho comercial dos representantes.</p>
+                <p>Estabelecer as condições de participação, critérios de apuração e premiação da campanha Desafio SWS – Julho 2025, promovida pela SWS Group com o intuito de estimular o desempenho comercial dos representantes.</p>
 
                 <h3>2. Período de Vigência</h3>
-                <p>A campanha é válida exclusivamente para o período de 1º a 31 de julho de
-                    2025.</p>
+                <p>A campanha é válida exclusivamente para o período de 1º a 31 de julho de 2025.</p>
 
                 <h3>3. Participantes Elegíveis</h3>
-                <p>Poderão participar todos os representantes comerciais da SWS Group com
-                    contrato assinado e vigente até o início do período da campanha, desde que
-                    permaneçam ativos até o encerramento da mesma.
-                    Representantes com contratos suspensos, rescindidos ou inativos durante o
-                    mês de julho estarão automaticamente desclassificados.</p>
-
+                <p>Poderão participar todos os representantes comerciais da SWS Group com contrato assinado e vigente até o início do período da campanha, desde que permaneçam ativos até o encerramento da mesma.</p>
+                <p>Representantes com contratos suspensos, rescindidos ou inativos durante o mês de julho estarão automaticamente desclassificados.</p>
 
                 <h3>4. Aceite do Regulamento</h3>
-                <p>Para que a participação seja considerada válida, o representante deverá
-                    realizar a inscrição oficial e aceitar os termos deste regulamento por meio do
-                    link que será enviado pela SWS Group.
-                    A ausência de inscrição ou aceite será considerada como não participação,
-                    ainda que o representante atinja os volumes exigidos pelas metas.</p>
+                <p>Para que a participação seja considerada válida, o representante deverá realizar a inscrição oficial e aceitar os termos deste regulamento por meio do link que será enviado pela SWS Group.</p>
+                <p>A ausência de inscrição ou aceite será considerada como não participação, ainda que o representante atinja os volumes exigidos pelas metas.</p>
 
                 <h3>5. Critérios de Apuração</h3>
-                <p>Serão consideradas válidas as vendas que cumprirem integralmente os
-                    seguintes requisitos:
-                </p>
+                <p>Serão consideradas válidas as vendas que cumprirem integralmente os seguintes requisitos:</p>
                 <ul>
-                    <li>Terem sido faturadas e com pagamento integral recebido pela SWS Group até
-                        31/07/2025.</li>
-                    <li>• A comissão correspondente já ter sido efetivamente repassada ao
-                        representante.</li>
-                    <li>Operações canceladas, inadimplidas ou que gerem qualquer tipo de estorno
-                        não serão consideradas para fins de apuração.</li>
+                    <li>• Terem sido faturadas e com pagamento integral recebido pela SWS Group até 31/07/2025.</li>
+                    <li>• A comissão correspondente já ter sido efetivamente repassada ao representante.</li>
+                    <li>• Operações canceladas, inadimplidas ou que gerem qualquer tipo de estorno não serão consideradas para fins de apuração.</li>
                 </ul>
-                <p>A SWS Group reserva-se o direito de revisar o ranking e até cancelar a
-                    premiação, mesmo após o encerramento da campanha, caso uma operação
-                    considerada na apuração venha a ser posteriormente cancelada.
-                </p>
+                <p>A SWS Group reserva-se o direito de revisar o ranking e até cancelar a premiação, mesmo após o encerramento da campanha, caso uma operação considerada na apuração venha a ser posteriormente cancelada.</p>
+
                 <h3>6. Metas e Mecânica de Premiação</h3>
-                <p>Meta Carro Zero – BYD Dolphin Mini:Será premiado o representante que alcançar o maior volume de
-                    vendas em
-                    projetos estruturados no período da campanha, desde que o montante faturado
-                    seja igual ou superior a R$ 6.000.000,00 (seis milhões de reais). </p>
-                <p>Meta VOE – Vale-Viagem de R$ 10.000,00: Será premiado o representante que atingir o maior volume de
-                    vendas ou
-                    locações de coletores de dados Compritec, a partir de um mínimo de 250
-                    unidades faturadas no período. </p>
-                <p>Em ambas as metas, o prêmio será concedido exclusivamente ao primeiro
-                    colocado, desde que o volume mínimo seja atingido.
-                    O ranking poderá sofrer alterações caso haja cancelamentos de pedidos
-                    considerados no cálculo.
-                </p>
+                <p><strong>a) Meta Carro Zero – BYD Dolphin Mini</strong><br>
+                Será premiado o representante que alcançar o maior volume de vendas em projetos estruturados no período da campanha, desde que o montante faturado seja igual ou superior a R$ 6.000.000,00 (seis milhões de reais).</p>
+                
+                <p><strong>b) Meta VOE – Vale-Viagem de R$ 10.000,00</strong><br>
+                Será premiado o representante que atingir o maior volume de vendas ou locações de coletores de dados Compritec, a partir de um mínimo de 250 unidades faturadas no período.</p>
+                
+                <p>Em ambas as metas, o prêmio será concedido exclusivamente ao primeiro colocado, desde que o volume mínimo seja atingido.</p>
+                <p>O ranking poderá sofrer alterações caso haja cancelamentos de pedidos considerados no cálculo.</p>
+
                 <h3>7. Critérios de Desempate</h3>
-                <p>Em caso de empate técnico entre dois ou mais representantes que atingirem o
-                    mesmo volume de vendas (em valor ou quantidade), serão aplicados, na
-                    seguinte ordem, os seguintes critérios de desempate:
-                </p>
-                <li>1. Data de fechamento da venda (anterior prevalece);</li>
-                <li>2. Quantidade total de pedidos fechados dentro do período da campanha;</li>
-                <li>Valor líquido total dos pedidos empatados (ou seja, valor bruto após
-                    eventuais descontos comerciais aplicados nas negociações);</li>
-                <li>Deliberação final da diretoria da SWS Group, com base na análise
-                    técnica do histórico das operações.</li>
+                <p>Em caso de empate técnico entre dois ou mais representantes que atingirem o mesmo volume de vendas (em valor ou quantidade), serão aplicados, na seguinte ordem, os seguintes critérios de desempate:</p>
+                <ol>
+                    <li>Data de fechamento da venda (anterior prevalece);</li>
+                    <li>Quantidade total de pedidos fechados dentro do período da campanha;</li>
+                    <li>Valor líquido total dos pedidos empatados (ou seja, valor bruto após eventuais descontos comerciais aplicados nas negociações);</li>
+                    <li>Deliberação final da diretoria da SWS Group, com base na análise técnica do histórico das operações.</li>
+                </ol>
+
                 <h3>8. Premiação</h3>
-                <p>a) Carro Zero – BYD Dolphin Mini: </p>
+                <p><strong>a) Carro Zero – BYD Dolphin Mini</strong></p>
                 <ul>
-                    <li>O veículo será adquirido pela SWS Group e entregue ao ganhador, com todos
-                        os custos de aquisição, documentação, IPVA e emplacamento pagos pela
-                        empresa
-                    </li>
-                    <li>A entrega será realizada de acordo com a disponibilidade da concessionária.</li>
-                    <li>A SWS Group não se responsabiliza por qualquer tipo de manutenção,
-                        problemas técnicos, avarias, acidentes, sinistros ou danos físicos e materiais
-                        ocorridos após a entrega do veículo ao ganhador, inclusive danos causados a
-                        terceiros.</li>
-                    <li>Não será fornecido seguro do automóvel, sendo esta responsabilidade
-                        integral do ganhador.</li>
-                    <li>O prêmio é pessoal e intransferível, não podendo ser convertido em dinheiro.</li>
+                    <li>• O veículo será adquirido pela SWS Group e entregue ao ganhador, com todos os custos de aquisição, documentação, IPVA e emplacamento pagos pela empresa.</li>
+                    <li>• O modelo premiado será o BYD Dolphin Mini, com 5 lugares, na cor Apricity White (branco), com interior Dark Blue e rodas de liga leve de 16 polegadas.</li>
+                    <li>• O prêmio será entregue com os itens de série definidos pela montadora para o modelo em questão, não sendo contemplados opcionais adicionais.</li>
+                    <li>• A entrega será realizada de acordo com a disponibilidade da concessionária, podendo haver prazo variável conforme cronograma da montadora.</li>
+                    <li>• A SWS Group não se responsabiliza por qualquer tipo de manutenção, problemas técnicos, avarias, acidentes, sinistros ou danos físicos e materiais ocorridos após a entrega do veículo ao ganhador, inclusive danos causados a terceiros.</li>
+                    <li>• Não será fornecido seguro do automóvel, sendo esta responsabilidade integral do ganhador.</li>
+                    <li>• O prêmio é pessoal e intransferível, não podendo ser convertido em dinheiro.</li>
+                    <li>• A SWS Group não se responsabiliza por eventuais impactos fiscais na declaração de Imposto de Renda do ganhador, que deverá avaliar individualmente a inclusão do bem em seu patrimônio e as obrigações decorrentes.</li>
                 </ul>
-                <p>b) Meta VOE – Vale-Viagem de R$ 10.000,00</p>
+
+                <p><strong>b) Meta VOE – Vale-Viagem de R$ 10.000,00</strong></p>
                 <ul>
-                    <li>O valor será creditado em cartão de benefícios da agência World 360 Tur, até
-                        o dia 31 de agosto de 2025.</li>
-                    <li>O crédito poderá ser utilizado:
-                        o Integralmente em uma única viagem;
-                        o De forma parcelada em mais de um serviço/oferta;
-                        o Como parte de pagamento/abatimento de pacotes superiores ao valor de R$
-                        10.000,00.</li>
-                    <li>O valor será válido por 18 meses a partir da data de entrega do cartão.</li>
-                    <li>A SWS Group não se responsabiliza por:
-                        o Custos com documentação pessoal (passaporte, vistos etc.);
-                        o Alimentação, transfers, taxas de embarque e serviços extras;
-                        o Cancelamentos, remarcações, atrasos de voo, problemas de hospedagem ou
-                        qualquer contratempo relacionado à viagem escolhida pelo ganhador.</li>
-                    <li>Após a entrega do cartão, todas as decisões, contratações e
-                        responsabilidades relativas à utilização do benefício passam a ser exclusivas
-                        do ganhador.
+                    <li>• O valor será creditado em cartão de benefícios da agência World 360 Tur, até o dia 31 de agosto de 2025.</li>
+                    <li>• O crédito poderá ser utilizado:
+                        <ul>
+                            <li>o Integralmente em uma única viagem;</li>
+                            <li>o De forma parcelada em mais de um serviço/oferta;</li>
+                            <li>o Como parte de pagamento/abatimento de pacotes superiores ao valor de R$ 10.000,00.</li>
+                        </ul>
                     </li>
+                    <li>• O valor será válido por 18 meses a partir da data de entrega do cartão.</li>
+                    <li>• A SWS Group não se responsabiliza por:
+                        <ul>
+                            <li>o Custos com documentação pessoal (passaporte, vistos etc.);</li>
+                            <li>o Alimentação, transfers, taxas de embarque e serviços extras;</li>
+                            <li>o Cancelamentos, remarcações, atrasos de voo, problemas de hospedagem ou qualquer contratempo relacionado à viagem escolhida pelo ganhador.</li>
+                        </ul>
+                    </li>
+                    <li>• Após a entrega do cartão, todas as decisões, contratações e responsabilidades relativas à utilização do benefício passam a ser exclusivas do ganhador.</li>
                 </ul>
+
                 <h3>9. Divulgação dos Resultados</h3>
                 <ul>
-                    <li>Rankings parciais serão divulgados semanalmente por canais internos da
-                        SWS Group.</li>
-                    <li>O resultado final será divulgado até o dia 1º de agosto de 2025.</li>
-                    <li>A SWS Group se reserva o direito de prorrogar o prazo de divulgação oficial
-                        até 7 de agosto de 2025, em caso de necessidade de revisão de pedidos,
-                        ajustes de faturamento ou outros fatores que impactem a apuração final.</li>
-                    <li>Caso o ganhador não responda ao comunicado oficial e/ou não forneça as
-                        informações solicitadas para formalização da premiação no prazo de 5 (cinco)
-                        dias corridos, a contar da data do comunicado, perderá automaticamente o
-                        direito ao prêmio, sem direito a contestação ou substituição.
-                    </li>
+                    <li>• Rankings parciais serão divulgados semanalmente por canais internos da SWS Group.</li>
+                    <li>• O resultado final será divulgado até o dia 1º de agosto de 2025.</li>
+                    <li>• A SWS Group se reserva o direito de prorrogar o prazo de divulgação oficial até 7 de agosto de 2025, em caso de necessidade de revisão de pedidos, ajustes de faturamento ou outros fatores que impactem a apuração final.</li>
+                    <li>• Caso o ganhador não responda ao comunicado oficial e/ou não forneça as informações solicitadas para formalização da premiação no prazo de 5 (cinco) dias corridos, a contar da data do comunicado, perderá automaticamente o direito ao prêmio, sem direito a contestação ou substituição.</li>
                 </ul>
+
                 <h3>10. Disposições Finais</h3>
                 <ul>
-                    <li>A SWS Group se reserva o direito de suspender, alterar ou cancelar esta
-                        campanha, a qualquer tempo, por motivo de força maior ou por decisão
-                        estratégica, sem que haja qualquer obrigação de indenização aos participantes</li>
-                    <li>A participação nesta campanha implica ciência, compreensão e aceitação
-                        total e irrestrita deste regulamento.</li>
-                    <li>Dúvidas, omissões ou situações não previstas neste documento serão
-                        resolvidas pela diretoria da SWS Group, de forma soberana e irrecorrível.</li>
+                    <li>• A SWS Group se reserva o direito de suspender, alterar ou cancelar esta campanha, a qualquer tempo, por motivo de força maior ou por decisão estratégica, sem que haja qualquer obrigação de indenização aos participantes.</li>
+                    <li>• A participação nesta campanha implica ciência, compreensão e aceitação total e irrestrita deste regulamento.</li>
+                    <li>• Dúvidas, omissões ou situações não previstas neste documento serão resolvidas pela diretoria da SWS Group, de forma soberana e irrecorrível.</li>
                 </ul>
             </div>
             <div class="modal-footer">
@@ -237,7 +188,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="script.js"></script>
+
     <script src="form-script.js"></script>
 </body>
 </html>
