--- a/public/index.html
+++ b/public/index.html
@@ -34,17 +34,11 @@
             <div class="slide" style="background-image: url('fundos/6.jpg')">
                 <div class="slide-overlay"></div>
             </div>
-            <div class="slide" style="background-image: url('fundos/7.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
-            <div class="slide" style="background-image: url('fundos/8.jpg')">
-                <div class="slide-overlay"></div>
-            </div>
         </div>
 
         <!-- Texto central -->
         <div class="center-content">
-            <h1 class="main-title" id="slideText">CADA VENDA TE COLOCA MAIS PERTO DA DIREÇÃO CERTA.</h1>
+            <h1 class="main-title">CADA VENDA TE COLOCA MAIS PERTO DA DIREÇÃO CERTA.</h1>
             
             <!-- Botão centralizado embaixo do texto -->
             <button class="cta-button">
@@ -60,8 +54,6 @@
             <span class="indicator" data-slide="3"></span>
             <span class="indicator" data-slide="4"></span>
             <span class="indicator" data-slide="5"></span>
-            <span class="indicator" data-slide="6"></span>
-            <span class="indicator" data-slide="7"></span>
         </div>
     </div>
 
